syntax = "proto3";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "fr.agrouagrou.proto";

package proto;

enum PlayerRole {
  VILLAGER = 0;
  WEREWOLF = 1;
  FORTUNE_TELLER = 2;
  WITCH = 3;
}

enum PlayerStatus {
  ALIVE = 0;
  DYING = 1;
  DEAD = 2;
}

message PlayerReply {
  string id = 1;
  string username = 2;
  PlayerStatus status = 3;
  PlayerRole role = 4;
}

// Register
message PlayerRegisterRequest {
  string username = 1;
}

// Unregister
message PlayerUnregisterRequest {
  string id = 1;
}

// StreamPlayerNotifications
message PlayerNotification {
  message PlayerRegistered {
    PlayerReply player = 1;
  }

  message PlayerUnregistered {
    string id = 1;
  }

  oneof notification {
    PlayerRegistered playerRegistered = 1;
    PlayerUnregistered playerUnregistered = 2;
  }
}

service Player {
  rpc Register (PlayerRegisterRequest) returns (PlayerReply) {}
  rpc Unregister (PlayerUnregisterRequest) returns (google.protobuf.Empty) {}
  rpc GetPlayers (google.protobuf.Empty) returns (stream PlayerReply) {}
  rpc StreamPlayerNotifications (google.protobuf.Empty) returns (stream PlayerNotification) {}
}
